debug-storybook.log
[11:05:31.058] [INFO] storybook v10.1.11
[11:05:32.650] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook/main.js[39m file.

Original error:
[37m/.storybook/main.js:17
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1624:18)
    at Module._compile (node:internal/modules/cjs/loader:1666:20)
    at Object..js (node:internal/modules/cjs/loader:1824:10)
    at Module.load (node:internal/modules/cjs/loader:1427:32)
    at Module._load (node:internal/modules/cjs/loader:1250:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at cjsLoader (node:internal/modules/esm/translators:316:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:208:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:370:25)[39m[39m
    at loadMainConfig (file://./node_modules/storybook/dist/_node-chunks/chunk-Q4DOC7HF.js:11701:11)
    at async buildDevStandalone (file://./node_modules/storybook/dist/core-server/index.js:7149:16)
    at async withTelemetry (file://./node_modules/storybook/dist/_node-chunks/chunk-2372JZ52.js:209:12)
    at async dev (file://./node_modules/storybook/dist/bin/core.js:2734:3)
    at async _Command.<anonymous> (file://./node_modules/storybook/dist/bin/core.js:2801:92)
[11:05:32.652] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[11:05:32.656] [WARN]   Failed to load preset: "/Users/salvatorecrivello/Desktop/vsProject/lipari-feux/.storybook/main.js"
[11:05:32.656] [ERROR] ./.storybook/main.js:17
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1624:18)
    at Module._compile (node:internal/modules/cjs/loader:1666:20)
    at Object..js (node:internal/modules/cjs/loader:1824:10)
    at Module.load (node:internal/modules/cjs/loader:1427:32)
    at Module._load (node:internal/modules/cjs/loader:1250:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at cjsLoader (node:internal/modules/esm/translators:316:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:208:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:370:25)
[11:05:45.446] [PROMPT] Would you like to send anonymous crash reports to improve Storybook and fix bugs faster? {"choice":false}